# RK2

./: CMakeLists.txt  CPack.cmake  CPackConfig.cmake  ChangeLog.md  LICENSE  coverage.md
.github/workflows/: cmake.yml  cmakeTests.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  code-0.1.1-Linux.deb  code-0.1.1-Linux.rpm
_build/_CPack_Packages/Linux/DEB/: code-0.1.1-Linux.deb
_build/_CPack_Packages/Linux/DEB/code-0.1.1-Linux/: control
_build/_CPack_Packages/Linux/RPM/: rpmbuildprint-devel.err  rpmbuildprint-devel.out
_build/_CPack_Packages/Linux/RPM/SPECS/: print-devel.spec
_build/code/: Makefile  cmake_install.cmake  main
code/: CMakeLists.txt  database.cpp  database.h  databaseparent.h  main.cpp  proxy.cpp  proxy.h  proxy.pro
tests/: myDB.db  tests.cpp
